--- a/BestHost.Infra/BestHost.Infra.csproj
+++ b/BestHost.Infra/BestHost.Infra.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -6,10 +6,6 @@
 
   <ItemGroup>
     <PackageReference Include="MongoDB.Driver" Version="2.10.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\BestHost.Model\BestHost.Model.csproj" />
   </ItemGroup>
 
 </Project>
